// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepCard matches snapshot 1`] = `
<div
  className="sc-gsnTZi kTXtGE"
>
  <div
    className="sc-bczRLJ hctMxl"
  >
    <div
      className="sc-hKMtZM hIdPmQ"
    >
      <div>
        <div
          className="question-info"
        >
          <span>
            Question 
            1
          </span>
          <span
            className="num-questions"
          >
             / 
            1
          </span>
          <span
            className="separator"
          >
            |
          </span>
          <span
            className="exercise-id"
          >
            ID: 
          </span>
        </div>
      </div>
      <div>
        <div
          className="points"
        >
          1.0
           Points
        </div>
      </div>
    </div>
    <div
      className="sc-jSMfEi iAuccz"
    >
      Question content
    </div>
  </div>
</div>
`;

exports[`TaskStepCard matches snapshot 1`] = `
<div
  className="sc-gsnTZi kTXtGE"
  data-task-step-id={1}
>
  <div
    className="sc-bczRLJ hctMxl exercise-step"
  >
    <div
      className="sc-hKMtZM hIdPmQ"
    >
      <div>
        <div
          className="question-info"
        >
          <span>
            Question 
            1
          </span>
          <span
            className="num-questions"
          >
             / 
            1
          </span>
          <span
            className="separator"
          >
            |
          </span>
          <span
            className="exercise-id"
          >
            ID: 
            1234@1
          </span>
        </div>
      </div>
      <div>
        <div
          className="points"
        >
          1.0
           Points
        </div>
      </div>
    </div>
    <div
      className="sc-jSMfEi ewHDjB"
    />
  </div>
</div>
`;
